--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
